"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-01-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-60:
	  hacknet: improved diagnostics, print out relevant PRS rules
		in error messages, where applicable.
		Test cases updated.  


2010-01-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-59:
	  lexer/grab-cpp-if.awk: help extract desired snippets of code
	  lexer/purify_flex.awk: added yy_size_t declarations
	  Makefile.am: updated generation of lexer/flex_lexer_common.cc,
		validated against flex 2.5.4
		compiles against 2.5.35 (but still dies at runtime)


2010-01-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-58:
	  No source revision.
	  Makefile.am: corrected some lexer/parser deps.
	  Updated test scripts for chpsim, to help with dlopen.
	  Validated on i686-apple-darwin10 with 
		LDFLAGS="-Wl,-no_compact_linkedit"
		to workaround a linker bug, reporting to Apple.


2010-01-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-57:
	  hacprsim: added default_after_min and default_after_max 
		parameters, which serve as default bounds to random
		delays where rules leave them unspecified.
		User-specified values always take precedence.
	  cmd: timing random [[min]:[max]]
	  Documented, and tested.


2010-01-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-56:
	  Added cast_test program to try to isolate issue plaguing
		i686-apple-darwin10, unexpected dynamic_cast failure.
	  for g++-4.4: fixed empty cpp macro argument issues
	  de-inlined many destructors, in effort to isolate 
		dynamic_cast failure, does not happen on any other platforms.


2009-12-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-55:
	  hacprsim: new command to print transition tcounts 'tcount'.